update the many file

--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="omar.css" />
 </head>
 <body>
-   
+    <img src="zeke.png" alt="A picture of my pet octopus, Zeke.">
     <div class="assign-1-shape-1">Normal Div</div>
 <div class="assign-1-shape-2">Normal Div</div>
 <div class="assign-1-shape-3">Normal Div</div>
