--- a/work3.html
+++ b/work3.html
@@ -1,15 +1,44 @@
-! <!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" style="font-size: 20px;">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
-</head>
+    <link rel="stylesheet" href="omar.css" />
+    
+    
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&family=Jomhuria&family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
+  </head>
 <body>
-    <div class="one"></div>
-    <div class="two"></div>
-    <div class="three"></div>
-    <div class="four"></div>
+    <div class="one">Title One</div>
+    <div class="two">Title Two With Two words</div>
+    <div class="three">Title three with Many Many Many Words</div>
+    <div class="four">Title Four With Many Many Many Words Title Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Title Four With Many Many Many Words Title Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Title Four With Many Many Many Words Title Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Title Four With Many Many Many Words Title Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Title Four With Many Many Many Words Title Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many WordsTitle Four With Many Many Many Words</div>
+<div class="omar">Omar Saad Fangary</div>
+<div class="five">Title three with Many Many Many Words</div>
+<div class="asd">
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+    Ea itaque fugit vitae incidunt quis dolores? Id alias
+    eveniet sequi perspiciatis iusto impedit,
+    accusamus maxime reprehenderit blanditiis adipisci sapiente hic velit.
+  </div>
+  <div class="bb">
+  <a class="zero" href="https://elzero.org">elzero</a>
+</div>
+<br>
+<div class="pare">
+    <p>This Is Paragraph</p>
+  </div>
+  <div class="sans">elzero web school</div>
+  <div class="cairo">elzero web school</div>
+  <div class="jom">elzero web school</div>
+  <hr>
+  <div class="sans1">elzero web school
+    <span>fangary</span>
+  </div>
+  <div class="cairo1">elzero web school</div>
+  <div class="jom1">elzero web school</div>
 </body>
 </html>
