--- a/work5.html
+++ b/work5.html
@@ -29,7 +29,84 @@
     <div class="container">
         <p>This Is Very Very Long Product Title</p>
     </div>
-    
+    <div class="container1">
+        <div class="element1">Element</div>
+    </div>
+    <div class="container1">
+        <div class="element2">Element</div>
+    </div>
+    <div class="container1">
+        <div class="element3">Element</div>
+    </div>
+    <br>
+    <div class="parent">
+        <div class="ele1">
+            <h2>Basic</h2>
+            <div class="circle">Free</div>
+
+        </div>
+        <div class="ele1">
+            <h2>Pro</h2>
+            <div class="circle">$30</div>
+        </div>
+    </div>
+    <br>
+    <hr>
+    <div class="parent2">Will Go Up On hover in Half Second
+        <div class="one1">Will Down After Half second</div>
+
+    </div>
+    <br>
+    <div class="impo" style="
+  background-color: red;
+  color: white;
+  padding: 20px;
+  border: 1px solid blue;
+  font-size: 80px;">
+        Elzero
+    </div>
+    <br>
+    <hr>
+    <div class="parent3">
+        <div>Element</div>
+        <div>Element</div>
+        <div>Element</div>
+    </div>
+    <br>
+    <br>
+    <hr><br>
+    <div class="zero1">Elzero</div>
+    <br><br><hr>
+    <div class="parent5">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+      </div>
+      <h2>اتوسيط كلمة داخل عنصر </h2>
+      <div class="center">center</div>
+
+      <br><hr>
+      <div class="parent6">
+        <div class="one"style="order:6;">1</div>
+        <div class="two"style="order:5;flex-basis:110px">2</div>
+        <div class="three"style="order:4;flex-basis:110px">3</div>
+        <div class="four"style="order:3;">4</div>
+        <div class="five"style="flex-basis:110px;order:1;">5</div>
+        <div class="six"style="flex-basis:110px;order:0;">6</div>
+      </div>
+      <br>
+      <hr>
+      <div class="parent7">
+        <div class="one"style="flex-shrink:5;width:30px;order:0;">1</div>
+        <div class="two"style="flex-grow:0;order:1;height:40px;width:518px;">2</div>
+        <div class="three"style="flex-shrink:5;width:30px;order:2;">3</div>
+      </div>
+      <br>
+      <hr>
+      
 </body>
 
 </html>
